# ros-pc2i

./: .gitignore  README.md  pyproject.toml
ros_pc2i/: __init__.py  stereo.py
ros_pc2i/base/: camera.py  material.py  mesh.py  renderer.py  scene.py  transform.py
ros_pc2i/materials/: metal.py
ros_pc2i/meshes/: calib.py  sphere.py
ros_pc2i/shaders/: fragment.glsl  fragment_pbr.glsl  vertex.glsl
script/: glviewer.py  pc2i.py
script/lib/: stereo.py
tests/: test.py
